# WEBP-Encoding-JS-wrapper

./: .gitignore  CMakeLists.txt  README.md  package.json
examples/: index.html
include/: webp_decoder.h  webp_encoder.h
src/: webp_decoder.c  webp_encoder.c  webp_wrapper.cpp
